[tool.poetry]
name = "fizzbuzz-api"
version = "0.1.0"
description = "A simple HTTP API for getting a fizzbuzz sequence"
authors = ["Joaquin Franco <chino.franco@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
httpx = "^0.27.0"
poetry = "^1.8.3"
prometheus-client = "^0.20.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
uvicorn = "^0.30.5"
requests = "^2.32.3"
tabulate = "^0.9.0"
redis = "^5.0.8"
pre-commit = "^3.8.0"

[tool.poetry.group.dev.dependencies]
behave = "^1.2.6"
black = "^24.8.0"
codecov = "^2.1.13"
coverage = "^7.6.0"
flake8 = "^7.1.0"
gitchangelog = "^3.0.4"
isort = "^5.13.2"
mkdocs = "^1.6.0"
locust = "^2.30.0"
mypy = "^1.11.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
